made some edits to the resume (need feedback)

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -32,11 +32,11 @@
     }
   </style>
 
-    <title>William Kaiser - Resume</title>
-    <meta
-      name="description"
-      content="William Kaiser is a student at the University of Virginia studying Computer Science in the School of Engineering interested in software development."
-    />
+  <title>William Kaiser - Resume</title>
+  <meta
+    name="description"
+    content="William Kaiser is a student at the University of Virginia studying Computer Science in the School of Engineering interested in software development."
+  />
 
   <body class="print-mimic leading-snug font-serif">
     <header class="grid grid-cols-3">
@@ -84,8 +84,8 @@
             </li>
             <li>
               <strong>Clubs:</strong> Forge (formerly HackC'Ville), Virginia Entrepreneurship
-              Organization, theCourseForum, Student Council Treasurer,
-              Poker Club, Phi Eta Sigma Honor Society
+              Organization, theCourseForum, Student Council Treasurer, Poker Club,
+              Phi Eta Sigma Honor Society
             </li>
           </ul>
         </div>
@@ -93,6 +93,31 @@
       <section id="experience">
         <h2 class="text-2xl font-semibold -mb-1">Experience</h2>
         <hr class="border-black border-t-[3px]" />
+
+        <div id="cav-auto-racing">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3>
+                <strong>Cavalier Autonomous Racing,</strong> University of Virginia
+              </h3>
+              <p class="italic">Perception Subteam</p>
+            </div>
+            <div>
+              <p class="italic">April 2024 &mdash; Present</p>
+            </div>
+          </div>
+
+          <ul class="list-disc list-inside px-4">
+            <li>
+              Developed a monocular depth estimation pipeline using Torch, ATen
+              and TensorRT.
+            </li>
+            <li>
+              Reduced perception's CPU utilization by 50% through implementing
+              network optimizations and zero-copy.
+            </li>
+          </ul>
+        </div>
 
         <div id="exp-gpu-research">
           <div class="flex flex-row justify-between items-end">
@@ -114,12 +139,12 @@
               through more efficient memory access.
             </li>
             <li>
-              Profiling machine learning memory use in GPUs with CUDA and NVIDIA
-              NSight Systems.
+              Profiling machine learning memory use in GPUs with CUDA, NVIDIA
+              NSight Systems, and GPGPU-Sim.
             </li>
             <li>
-              Paid National Science Foundation position with Professor of
-              Computer Science Adwait Jog.
+              Paid National Science Foundation research position with Professor
+              of Computer Science Adwait Jog.
             </li>
           </ul>
         </div>
@@ -142,17 +167,17 @@
               Built a platform to share material science data utilizing a
               Next.js frontend and an AWS OpenSearch cluster.
             </li>
-            <li>
+            <!-- <li>
               Collected experimental and simulation data for 5 main energetic
               material categories.
-            </li>
+            </li> -->
             <li>
               Created a data ingestion pipeline for >1 terabyte data imports
               using AWS S3 and AWS API Gateway.
             </li>
-            <li>
+            <!-- <li>
               Mocked and refined a search and import user interface in Figma.
-            </li>
+            </li> -->
           </ul>
         </div>
 
@@ -173,7 +198,8 @@
               reading pipeline leveraging OpenCV.
             </li>
             <li>
-              Statistically analyzed >13,000 mortgage applications using Microsoft Excel and R.
+              Statistically analyzed >13,000 mortgage applications using
+              Microsoft Excel and R.
             </li>
             <li>
               Presented results of mortgage pipeline examination to client
@@ -202,13 +228,16 @@
 
           <ul class="list-disc list-inside px-4">
             <li>
-              Taught 20+ students machine learning in a 10-week course with TensorFlow.
+              Taught 20+ students and introduction to machine learning in a
+              10-week course with TensorFlow.
             </li>
             <li>
-              Developed a 10-week curriculum and course pack from scratch which included: readings, lectures, workshops and projects.
+              Developed a 10-week curriculum and course pack from scratch which
+              included: readings, lectures, workshops and projects.
             </li>
             <li>
-              Culminated in a student-directed final project showcasing an interactive machine learning model.
+              Culminated in a student-directed final project showcasing an
+              interactive machine learning model.
             </li>
           </ul>
         </div>
@@ -228,7 +257,7 @@
           </div>
         </div>
 
-        <ul class="list-disc list-inside px-4">
+        <!-- <ul class="list-disc list-inside px-4">
           <li>
             Organized a pitch competition with 10 teams and $1,000 in prizes.
           </li>
@@ -236,7 +265,7 @@
             Coordinated speaker events with local entrepreneurs with over 50
             attendees.
           </li>
-        </ul>
+        </ul> -->
       </div>
 
       <section id="projects">
@@ -256,8 +285,8 @@
 
           <ul class="list-disc list-inside px-4">
             <li>
-              Built and published a open-source screen and camera recorder to make
-              time-lapses for MacOS.
+              Built and published a open-source screen and camera recorder to
+              make time-lapses for MacOS.
             </li>
             <!-- <li>
               Prototyped this project to reduce screen recording sizes using
@@ -268,7 +297,8 @@
               SwiftUI, and ScreenCaptureKit.
             </li>
             <li>
-              Ranked #1 on Hacker News and gained >700 Stars on GitHub after launch.
+              Ranked #1 on Hacker News and gained >700 Stars on GitHub after
+              launch.
             </li>
           </ul>
         </div>
@@ -293,13 +323,13 @@
               Scraped >13,000 top science fair projects using Python and
               BeautifulSoup.
             </li>
-            <li>
+            <!-- <li>
               Analyzed data on 20 project categories utilizing Pandas and
               Matplotlib.
-            </li>
+            </li> -->
             <li>
-              Created an interactive in-browser dashboard leveraging
-              Bokeh, JavaScript and WebGL.
+              Created an interactive in-browser dashboard leveraging Bokeh,
+              JavaScript and WebGL.
             </li>
             <li>
               Published findings in a 5,000-word post that has >4,500 reads on
@@ -348,7 +378,8 @@
           </li>
           <li>
             <strong>Libraries:</strong> Django, React (Next.js), TensorFlow, OpenCV,
-            GGPlot2, Bokeh, Matplotlib, Pandas, NumPy, SciPy
+            GGPlot2, Bokeh, Matplotlib, Pandas, NumPy, SciPy, Robot Operating System
+            2 (ROS 2)
           </li>
           <li>
             <strong>Certifications:</strong> TensorFlow Developer Certified, AWS
