--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,6 +1,7 @@
 <html lang="en">
   <style>
     body {
+      /* disables ligatures */
       text-rendering: optimizeSpeed;
     }
 
@@ -119,6 +120,28 @@
           </ul>
         </div>
 
+        <div class="flex flex-row justify-between items-end">
+          <div>
+            <h3>
+              <strong>SitScape,</strong> Washington, D.C.
+            </h3>
+            <p class="italic">Software Engineering Intern</p>
+          </div>
+          <div>
+            <p class="italic">May 2024 &mdash; August 2024</p>
+          </div>
+        </div>
+
+        <ul class="list-disc list-inside px-4">
+          <li>
+            Built a user-interface and logic copilot for a web-based enterprise low-code development platform able to complete 3-5 minute tasks for humans.
+          </li>
+          <li>
+            Developed a custom intermediate representation for UI and logic which was able to enhance large language model parsing.
+          </li>
+        </ul>
+      </div>
+
         <div id="exp-gpu-research">
           <div class="flex flex-row justify-between items-end">
             <div>
@@ -198,13 +221,13 @@
               reading pipeline leveraging OpenCV.
             </li>
             <li>
-              Statistically analyzed >13,000 mortgage applications using
+              Statistically analyzed and presented results to stakeholders on >13,000 mortgage applications using
               Microsoft Excel and R.
             </li>
-            <li>
+            <!-- <li>
               Presented results of mortgage pipeline examination to client
               stakeholders.
-            </li>
+            </li> -->
           </ul>
         </div>
       </section>
@@ -235,10 +258,10 @@
               Developed a 10-week curriculum and course pack from scratch which
               included: readings, lectures, workshops and projects.
             </li>
-            <li>
+            <!-- <li>
               Culminated in a student-directed final project showcasing an
               interactive machine learning model.
-            </li>
+            </li> -->
           </ul>
         </div>
       </section>
@@ -319,21 +342,19 @@
           </div>
 
           <ul class="list-disc list-inside px-4">
-            <li>
+            <!-- <li>
               Scraped >13,000 top science fair projects using Python and
               BeautifulSoup.
-            </li>
-            <!-- <li>
+            </li> -->
+          <!-- <li>
               Analyzed data on 20 project categories utilizing Pandas and
               Matplotlib.
             </li> -->
             <li>
-              Created an interactive in-browser dashboard leveraging Bokeh,
-              JavaScript and WebGL.
+              Scraped over 13,000 top science fair projects using Python and BeautifulSoup, and created an interactive in-browser dashboard with Bokeh, JavaScript, and WebGL.
             </li>
             <li>
-              Published findings in a 5,000-word post that has >4,500 reads on
-              LinkedIn.
+              Published findings in a 5,000-word LinkedIn post with over 4,500 reads.
             </li>
           </ul>
         </div>
@@ -378,8 +399,7 @@
           </li>
           <li>
             <strong>Libraries:</strong> Django, React (Next.js), TensorFlow, OpenCV,
-            GGPlot2, Bokeh, Matplotlib, Pandas, NumPy, SciPy, Robot Operating System
-            2 (ROS 2)
+            GGPlot2, Bokeh, Matplotlib, Pandas, NumPy, ROS 2
           </li>
           <li>
             <strong>Certifications:</strong> TensorFlow Developer Certified, AWS
@@ -395,7 +415,7 @@
           <li>Hoo Hacks Patient Safety Challenge Award Winner</li>
           <li>Dean's List</li>
           <li>Eagle Scout Award</li>
-          <!-- <li>The Congressional Award Gold Medal</li> -->
+          <li>The Congressional Award Gold Medal</li>
           <li>National Merit Finalist</li>
         </ul>
       </section>
