--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -145,7 +145,8 @@
             low-code development platform.
           </li>
           <li>
-            Saved development time by reliable completing intermediate length tasks (~3-5 minutes in length).
+            Saved development time by reliable completing intermediate length
+            tasks (~3-5 minutes in length).
           </li>
           <!-- <li>
             Developed an intermediate representation for UI and logic
@@ -153,145 +154,147 @@
           </li> -->
         </ul>
 
-      <div id="exp-gpu-research">
-        <div class="flex flex-row justify-between items-end">
-          <div>
-            <h3 class="-mb-1">
-              <strong>School of Engineering and Applied Science,</strong> University
-              of Virginia
-            </h3>
-            <p class="italic">Graphical Processing Unit (GPU) Researcher</p>
+        <div id="exp-gpu-research">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1">
+                <strong>School of Engineering and Applied Science,</strong> University
+                of Virginia
+              </h3>
+              <p class="italic">Graphical Processing Unit (GPU) Researcher</p>
+            </div>
+            <div>
+              <p class="italic">December 2023 &mdash; Present</p>
+            </div>
           </div>
-          <div>
-            <p class="italic">December 2023 &mdash; Present</p>
-          </div>
+
+          <ul class="list-disc list-inside px-4 mr-12">
+            <li>
+              Researching how to make Large Language Models (LLMs) faster
+              through more efficient memory access.
+            </li>
+            <li>
+              Profiling machine learning memory use in GPUs with CUDA, NVIDIA
+              NSight Systems, and GPGPU-Sim.
+            </li>
+            <li>
+              Paid National Science Foundation research position with Professor
+              of Computer Science Adwait Jog.
+            </li>
+          </ul>
         </div>
 
-        <ul class="list-disc list-inside px-4 mr-12">
-          <li>
-            Researching how to make Large Language Models (LLMs) faster through
-            more efficient memory access.
-          </li>
-          <li>
-            Profiling machine learning memory use in GPUs with CUDA, NVIDIA
-            NSight Systems, and GPGPU-Sim.
-          </li>
-          <li>
-            Paid National Science Foundation research position with Professor of
-            Computer Science Adwait Jog.
-          </li>
-        </ul>
-      </div>
-
-      <div id="exp-ds-research">
-        <div class="flex flex-row justify-between items-end">
-          <div>
-            <h3 class="-mb-1">
-              <strong>School of Data Science,</strong> University of Virginia
-            </h3>
-            <p class="italic">Research Intern</p>
+        <div id="exp-ds-research">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1">
+                <strong>School of Data Science,</strong> University of Virginia
+              </h3>
+              <p class="italic">Research Intern</p>
+            </div>
+            <div>
+              <p class="italic">September 2022 &mdash; May 2023</p>
+            </div>
           </div>
-          <div>
-            <p class="italic">September 2022 &mdash; May 2023</p>
-          </div>
-        </div>
 
-        <ul class="list-disc list-inside px-4 mr-12">
-          <li>
-            Built a platform to share material science data utilizing a Next.js
-            frontend and an OpenSearch cluster.
-          </li>
-          <!-- <li>
+          <ul class="list-disc list-inside px-4 mr-12">
+            <li>
+              Built a platform to share material science data utilizing a
+              Next.js frontend and an OpenSearch cluster.
+            </li>
+            <!-- <li>
               Collected experimental and simulation data for 5 main energetic
               material categories.
             </li> -->
-          <li>
-            Created a data ingestion pipeline for >1 terabyte data imports using
-            AWS S3 and AWS API Gateway.
-          </li>
-          <!-- <li>
+            <li>
+              Created a data ingestion pipeline for >1 terabyte data imports
+              using AWS S3 and AWS API Gateway.
+            </li>
+            <!-- <li>
               Mocked and refined a search and import user interface in Figma.
             </li> -->
-        </ul>
-      </div>
-
-      <div id="exp-val-partners">
-        <div class="flex flex-row justify-between items-end">
-          <div>
-            <h3 class="-mb-1"><strong>Valedor Partners,</strong> Houston, TX</h3>
-            <p class="italic">Data Science Intern</p>
-          </div>
-          <div>
-            <p class="italic">May 2021 &mdash; August 2021</p>
-          </div>
+          </ul>
         </div>
 
-        <ul class="list-inside list-disc px-4 mr-12">
-          <li>
-            Achieved >90% validation accuracy with an optical pressure gauge
-            reading pipeline leveraging OpenCV.
-          </li>
-          <li>
-            Analyzed
-            >13,000 mortgage applications using Microsoft Excel and R.
-          </li>
-          <!-- <li>
+        <div id="exp-val-partners">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1">
+                <strong>Valedor Partners,</strong> Houston, TX
+              </h3>
+              <p class="italic">Data Science Intern</p>
+            </div>
+            <div>
+              <p class="italic">May 2021 &mdash; August 2021</p>
+            </div>
+          </div>
+
+          <ul class="list-inside list-disc px-4 mr-12">
+            <li>
+              Achieved >90% validation accuracy with an optical pressure gauge
+              reading pipeline leveraging OpenCV.
+            </li>
+            <li>
+              Analyzed >13,000 mortgage applications using Microsoft Excel and
+              R.
+            </li>
+            <!-- <li>
               Presented results of mortgage pipeline examination to client
               stakeholders.
             </li> -->
-        </ul>
-      </div>
-    </section>
-
-    <section id="leadership">
-      <h2 class="text-xl font-semibold -mb-1">Leadership</h2>
-      <hr class="mb-1 border-black border-t-[1px]" />
-
-      <div id="course-director">
-        <div class="flex flex-row justify-between items-end">
-          <div>
-            <h3 class="-mb-1">
-              <strong>Forge,</strong> University of Virginia
-            </h3>
-            <p class="italic">Course Director</p>
-          </div>
-          <div>
-            <p class="italic">August 2023 &mdash; Present</p>
-          </div>
+          </ul>
         </div>
+      </section>
 
-        <ul class="list-disc list-inside px-4 mr-12">
-          <li>
-            Taught 20+ students and introduction to machine learning in a
-            10-week course with TensorFlow.
-          </li>
-          <li>
-            Developed a 10-week curriculum and course pack from scratch which
-            included: readings, lectures, workshops and projects.
-          </li>
-          <!-- <li>
+      <section id="leadership">
+        <h2 class="text-xl font-semibold -mb-1">Leadership</h2>
+        <hr class="mb-1 border-black border-t-[1px]" />
+
+        <div id="course-director">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1">
+                <strong>Forge,</strong> University of Virginia
+              </h3>
+              <p class="italic">Course Director</p>
+            </div>
+            <div>
+              <p class="italic">August 2023 &mdash; Present</p>
+            </div>
+          </div>
+
+          <ul class="list-disc list-inside px-4 mr-12">
+            <li>
+              Taught 20+ students and introduction to machine learning in a
+              10-week course with TensorFlow.
+            </li>
+            <li>
+              Developed a 10-week curriculum and course pack from scratch which
+              included: readings, lectures, workshops and projects.
+            </li>
+            <!-- <li>
               Culminated in a student-directed final project showcasing an
               interactive machine learning model.
             </li> -->
-        </ul>
-      </div>
-    </section>
-
-    <div id="veo">
-      <div class="flex flex-row justify-between items-end">
-        <div>
-          <h3 class="-mb-1">
-            <strong>Virginia Entrepreneurship Organization, </strong> University
-            of Virginia
-          </h3>
-          <p class="italic">Vice President of Events</p>
+          </ul>
         </div>
-        <div>
-          <p class="italic">November 2023 &mdash; Present</p>
-        </div>
-      </div>
+      </section>
 
-      <!-- <ul class="list-disc list-inside px-4">
+      <div id="veo">
+        <div class="flex flex-row justify-between items-end">
+          <div>
+            <h3 class="-mb-1">
+              <strong>Virginia Entrepreneurship Organization, </strong> University
+              of Virginia
+            </h3>
+            <p class="italic">Vice President of Events</p>
+          </div>
+          <div>
+            <p class="italic">November 2023 &mdash; Present</p>
+          </div>
+        </div>
+
+        <!-- <ul class="list-disc list-inside px-4">
           <li>
             Organized a pitch competition with 10 teams and $1,000 in prizes.
           </li>
@@ -300,44 +303,44 @@
             attendees.
           </li>
         </ul> -->
-    </div>
+      </div>
 
-    <section id="projects">
-      <h2 class="text-xl font-semibold -mb-1">Projects</h2>
-      <hr class="mb-1 border-black border-t-[1px]" />
+      <section id="projects">
+        <h2 class="text-xl font-semibold -mb-1">Projects</h2>
+        <hr class="mb-1 border-black border-t-[1px]" />
 
-      <div id="timelapse">
-        <div class="flex flex-row justify-between items-end">
-          <div>
-            <h3 class="-mb-1"><strong>TimeLapze</strong></h3>
-            <p class="italic">Screen Recorder</p>
+        <div id="timelapse">
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1"><strong>TimeLapze</strong></h3>
+              <p class="italic">Screen Recorder</p>
+            </div>
+            <div>
+              <p class="italic">May 2023 &mdash; January 2024</p>
+            </div>
           </div>
-          <div>
-            <p class="italic">May 2023 &mdash; January 2024</p>
-          </div>
-        </div>
 
-        <ul class="list-disc list-inside px-4 mr-12">
-          <li>
-            Built and published a open-source screen and camera recorder to make
-            time-lapses for MacOS.
-          </li>
-          <!-- <li>
+          <ul class="list-disc list-inside px-4 mr-12">
+            <li>
+              Built and published a open-source screen and camera recorder to
+              make time-lapses for MacOS.
+            </li>
+            <!-- <li>
               Prototyped this project to reduce screen recording sizes using
               Python and OpenCV.
             </li> -->
-          <li>
-            Reduced build size from 500 MB to 2 MB after rewriting a Python
-            proof of concept in Swift.
-          </li>
-          <li>
-            Ranked #1 on Hacker News and gained >700 Stars on GitHub after
-            launch.
-          </li>
-        </ul>
-      </div>
+            <li>
+              Reduced build size from 500 MB to 2 MB after rewriting a Python
+              proof of concept in Swift.
+            </li>
+            <li>
+              Ranked #1 on Hacker News and gained >700 Stars on GitHub after
+              launch.
+            </li>
+          </ul>
+        </div>
 
-      <!-- <div id="isef-analysis">
+        <!-- <div id="isef-analysis">
         <div class="flex flex-row justify-between items-end">
           <div>
             <h3 class="-mb-1">
@@ -402,36 +405,38 @@
         </div>
     </section> -->
 
-    <section id="skills">
-      <h2 class="text-xl font-semibold -mb-1">Skills</h2>
-      <hr class="mb-1 border-black border-t-[1px]" />
+        <section id="skills">
+          <h2 class="text-xl font-semibold -mb-1">Skills</h2>
+          <hr class="mb-1 border-black border-t-[1px]" />
 
-      <ul class="px-4 pt-2">
-        <li>
-          <strong>Languages</strong> Python, C++, Java, Swift, HTML, CSS, JavaScript, SQL
-        </li>
-        <li>
-          <strong>Libraries</strong> Django, ROS 2, React (Next.js), TensorFlow, OpenCV,
-          GGPlot2, Bokeh, Matplotlib, Pandas, NumPy
-        </li>
-        <li>
-          <strong>Certifications</strong> TensorFlow Developer Certified, AWS Certified
-          Cloud Practitioner
-        </li>
-      </ul>
-    </section>
+          <ul class="px-4 pt-2">
+            <li>
+              <strong>Languages</strong> Python, C++, Java, Swift, HTML, CSS, JavaScript,
+              SQL
+            </li>
+            <li>
+              <strong>Libraries</strong> Django, ROS 2, React (Next.js), TensorFlow,
+              OpenCV, GGPlot2, Bokeh, Matplotlib, Pandas, NumPy
+            </li>
+            <li>
+              <strong>Certifications</strong> TensorFlow Developer Certified, AWS
+              Certified Cloud Practitioner
+            </li>
+          </ul>
+        </section>
 
-    <section id="honors">
-      <h2 class="text-xl font-semibold -mb-1">Honors and Awards</h2>
-      <hr class="mb-1 border-black border-t-[1px]" />
-      <ul class="w-full grid grid-cols-2 list-inside list-disc px-4">
-        <li>Hoo Hacks Patient Safety Challenge Award Winner</li>
-        <li>Dean's List</li>
-        <li>Eagle Scout Award</li>
-        <li>The Congressional Award Gold Medal</li>
-        <!-- <li>National Merit Finalist</li> -->
-      </ul>
-    </section>
-  </main>
+        <section id="honors">
+          <h2 class="text-xl font-semibold -mb-1">Honors and Awards</h2>
+          <hr class="mb-1 border-black border-t-[1px]" />
+          <ul class="w-full grid grid-cols-2 list-inside list-disc px-4">
+            <li>Hoo Hacks Patient Safety Challenge Award Winner</li>
+            <li>Dean's List</li>
+            <li>Eagle Scout Award</li>
+            <li>The Congressional Award Gold Medal</li>
+            <!-- <li>National Merit Finalist</li> -->
+          </ul>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
