chore: Update resume styling and fix typos

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -22,7 +22,7 @@
       .print-mimic {
         width: auto;
         margin: 0;
-        padding: 5mm;
+        padding: 0 5mm 5mm 0mm;
         border: none;
         box-shadow: none;
       }
@@ -43,7 +43,7 @@
     <header class="grid grid-cols-3">
       <div class="col-span-1 col-start-2 flex flex-col text-center">
         <h1 class="text-xl font-bold">William David Kaiser</h1>
-        <a href="mailto:williamdkaiser@outlook.com" class="font-bold"
+        <a href="mailto:williamdkaiser@outlook.com"
           >williamdkaiser@outlook.com</a
         >
         <a href="tel:832-925-6037">(832) 925-6037</a>
@@ -59,7 +59,7 @@
     <main>
       <section id="education" class="space-y-2">
         <div>
-          <h2 class="text-xl font-semibold -mb-1s">Education</h2>
+          <h2 class="text-xl font-medium -mb-1">Education</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
         </div>
 
@@ -96,7 +96,7 @@
       </section>
       <section id="experience" class="space-y-2">
         <div>
-          <h2 class="text-xl font-semibold -mb-1">Experience</h2>
+          <h2 class="text-xl font-medium -mb-1">Experience</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
         </div>
 
@@ -113,12 +113,12 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-12">
+          <ul class="list-disc list-inside px-4 mr-8">
             <li>
               <!-- Developed a monocular depth estimation pipeline using Torch, ATen
               and TensorRT. -->
-              Integrated cameras into software stack using a machine-learning model
-              trained with PyTorch and TensorRT.
+              Integrated cameras into the stack with a machine-learning model
+              trained using PyTorch.
             </li>
             <li>
               Reduced subteam's CPU utilization by 50% through implementing
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <ul class="list-disc list-inside px-4 mr-12">
+        <ul class="list-disc list-inside px-4 mr-8">
           <li>
             Built a UI and logic generator chatbot for a web-based enterprise
             low-code development platform.
@@ -168,7 +168,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-12">
+          <ul class="list-disc list-inside px-4 mr-8">
             <li>
               Researching how to make Large Language Models (LLMs) faster
               through more efficient memory access.
@@ -197,7 +197,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-12">
+          <ul class="list-disc list-inside px-4 mr-8">
             <li>
               Built a platform to share material science data utilizing a
               Next.js frontend and an OpenSearch cluster.
@@ -229,7 +229,7 @@
             </div>
           </div>
 
-          <ul class="list-inside list-disc px-4 mr-12">
+          <ul class="list-inside list-disc px-4 mr-8">
             <li>
               Achieved >90% validation accuracy with an optical pressure gauge
               reading pipeline leveraging OpenCV.
@@ -247,7 +247,7 @@
       </section>
 
       <section id="leadership">
-        <h2 class="text-xl font-semibold -mb-1">Leadership</h2>
+        <h2 class="text-xl font-medium -mb-1">Leadership</h2>
         <hr class="mb-1 border-black border-t-[1px]" />
 
         <div id="course-director">
@@ -263,14 +263,14 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-12">
+          <ul class="list-disc list-inside px-4 mr-8">
             <li>
               Taught 20+ students and introduction to machine learning in a
               10-week course with TensorFlow.
             </li>
             <li>
-              Developed a 10-week curriculum and course pack from scratch which
-              included: readings, lectures, workshops and projects.
+              Developed a 10-week curriculum from scratch which
+              included readings, lectures and take-home projects.
             </li>
             <!-- <li>
               Culminated in a student-directed final project showcasing an
@@ -306,7 +306,7 @@
       </div>
 
       <section id="projects">
-        <h2 class="text-xl font-semibold -mb-1">Projects</h2>
+        <h2 class="text-xl font-medium -mb-1">Projects</h2>
         <hr class="mb-1 border-black border-t-[1px]" />
 
         <div id="timelapse">
@@ -320,7 +320,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-12">
+          <ul class="list-disc list-inside px-4 mr-8">
             <li>
               Built and published a open-source screen and camera recorder to
               make time-lapses for MacOS.
@@ -331,10 +331,10 @@
             </li> -->
             <li>
               Reduced build size from 500 MB to 2 MB after rewriting a Python
-              proof of concept in Swift.
+              proof of concept in native Swift.
             </li>
             <li>
-              Ranked #1 on Hacker News and gained >700 Stars on GitHub after
+              Ranked #1 on Hacker News and gained >750 Stars on GitHub after
               launch.
             </li>
           </ul>
@@ -355,7 +355,7 @@
           </div>
         </div>
 
-        <ul class="list-disc list-inside px-4 mr-12">
+        <ul class="list-disc list-inside px-4 mr-8">
           <li>
               Scraped >13,000 top science fair projects using Python and
               BeautifulSoup.
@@ -406,7 +406,7 @@
     </section> -->
 
         <section id="skills">
-          <h2 class="text-xl font-semibold -mb-1">Skills</h2>
+          <h2 class="text-xl font-medium -mb-1">Skills</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
 
           <ul class="px-4 pt-2">
@@ -426,7 +426,7 @@
         </section>
 
         <section id="honors">
-          <h2 class="text-xl font-semibold -mb-1">Honors and Awards</h2>
+          <h2 class="text-xl font-medium -mb-1">Honors and Awards</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
           <ul class="w-full grid grid-cols-2 list-inside list-disc px-4">
             <li>Hoo Hacks Patient Safety Challenge Award Winner</li>
