--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -2,7 +2,7 @@
   <style>
     body {
       /* disables ligatures */
-      text-rendering: optimizeSpeed;
+      /* text-rendering: optimizeSpeed; */
     }
 
     /* Styles for screen only */
@@ -22,7 +22,7 @@
       .print-mimic {
         width: auto;
         margin: 0;
-        padding: 0 5mm 5mm 0mm;
+        padding: 5mm 10mm 5mm 10mm;
         border: none;
         box-shadow: none;
       }
@@ -49,7 +49,7 @@
         <a href="tel:832-925-6037">(832) 925-6037</a>
       </div>
 
-      <div class="my-auto text-right flex flex-col">
+      <div class="mt-auto text-right flex flex-col">
         <a href="https://github.com/wkaisertexas">github.com/wkaisertexas</a>
         <a href="https://www.linkedin.com/in/williamdkaiser"
           >linkedin.com/in/williamdkaiser</a
@@ -80,16 +80,16 @@
               <div class="italic">May 2026</div>
             </div>
           </div>
-          <ul class="list-inside list-disc px-4 pr-24">
+          <ul class="list-inside list-decimal px-4 pr-20">
             <li>
-              <strong>Coursework</strong> Data Structures and Algorithms, Computer
+              <strong>Relevant Coursework</strong> Data Structures and Algorithms, Computer
               Systems and Organizations, Linear Algebra, Cryptography, Software Development
               Essentials, Advanced Software Development
             </li>
             <li>
-              <strong>Clubs</strong> Forge, Virginia Entrepreneurship Organization,
-              theCourseForum, Poker Club, Phi Eta Sigma Honor Society, Cavalier Autonomous
-              Racing
+              <strong>Clubs</strong> Phi Eta Sigma Honor Society, Cavalier Autonomous
+              Racing, Forge, theCourseForum, Virginia Entrepreneurship Organization,
+               Virginia Poker Club
             </li>
           </ul>
         </div>
@@ -102,7 +102,7 @@
 
         <div id="cav-auto-racing">
           <div class="flex flex-row justify-between items-end">
-            <div>
+          <div>
               <h3 class="-mb-1">
                 <strong>Cavalier Autonomous Racing,</strong> University of Virginia
               </h3>
@@ -113,15 +113,29 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-8">
+          <ul class="list-decimal list-inside px-4 mr-8 inset-4">
+            <!-- <li>
+              Responsible for detecting cars and environmental obstacles which is used to plan the car's raceline.
+            </li> -->
             <li>
-              <!-- Developed a monocular depth estimation pipeline using Torch, ATen
-              and TensorRT. -->
-              Integrated cameras into the stack with a machine-learning model
-              trained using PyTorch.
+              Responsible for real-time detection of opponent race cars and obstacles at speeds up to 200 miles per hour.
+            </li>
+            <!-- <li>
+              Developed a monocular depth estimation pipeline using Torch, ATen
+              and TensorRT.
+              Integrated cameras into the perception stack with a PyTorch machine-learning model.
+            </li> -->
+            <li>
+              Mitigated rear-radar blind spots by integrating cameras into the detection pipeline.
+            </li>
+            <!-- <li>
+              Used cameras to reduce radar blindspots 
+            </li> -->
+            <li>
+              Implemented an Extended Kalman Filter (EKF) to fuse camera, lidar and radar pose estimation.
             </li>
             <li>
-              Reduced subteam's CPU utilization by 50% through implementing
+              Decreased detection time by 50% by implementing
               network optimizations and zero-copy data-transfer.
             </li>
           </ul>
@@ -130,7 +144,7 @@
         <div class="flex flex-row justify-between items-end">
           <div>
             <h3 class="-mb-1">
-              <strong>SitScape,</strong> Washington, D.C.
+              <strong>SitScape,</strong> Washington D.C.
             </h3>
             <p class="italic">Software Engineering Intern</p>
           </div>
@@ -139,7 +153,7 @@
           </div>
         </div>
 
-        <ul class="list-disc list-inside px-4 mr-8">
+        <ul class="list-decimal list-inside px-4 mr-8">
           <li>
             Built a UI and logic generator chatbot for a web-based enterprise
             low-code development platform.
@@ -168,7 +182,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-8">
+          <ul class="list-decimal list-inside px-4 mr-8">
             <li>
               Researching how to make Large Language Models (LLMs) faster
               through more efficient memory access.
@@ -197,7 +211,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-8">
+          <ul class="list-decimal list-inside px-4 mr-8">
             <li>
               Built a platform to share material science data utilizing a
               Next.js frontend and an OpenSearch cluster.
@@ -229,13 +243,13 @@
             </div>
           </div>
 
-          <ul class="list-inside list-disc px-4 mr-8">
+          <ul class="list-inside list-decimal px-4 mr-8">
             <li>
-              Achieved >90% validation accuracy with an optical pressure gauge
+              Achieved 90% validation accuracy with an optical pressure gauge
               reading pipeline leveraging OpenCV.
             </li>
             <li>
-              Analyzed >13,000 mortgage applications using Microsoft Excel and
+              Analyzed over 13,000 mortgage applications using Microsoft Excel and
               R.
             </li>
             <!-- <li>
@@ -263,7 +277,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-8">
+          <ul class="list-decimal list-inside px-4 mr-8">
             <li>
               Taught 20+ students and introduction to machine learning in a
               10-week course with TensorFlow.
@@ -294,7 +308,7 @@
           </div>
         </div>
 
-        <!-- <ul class="list-disc list-inside px-4">
+        <!-- <ul class="list-decimal list-inside px-4">
           <li>
             Organized a pitch competition with 10 teams and $1,000 in prizes.
           </li>
@@ -320,7 +334,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4 mr-8">
+          <ul class="list-decimal list-inside px-4 mr-8">
             <li>
               Built and published a open-source screen and camera recorder to
               make time-lapses for MacOS.
@@ -355,7 +369,7 @@
           </div>
         </div>
 
-        <ul class="list-disc list-inside px-4 mr-8">
+        <ul class="list-decimal list-inside px-4 mr-8">
           <li>
               Scraped >13,000 top science fair projects using Python and
               BeautifulSoup.
@@ -387,7 +401,7 @@
             </div>
           </div>
 
-          <ul class="list-disc list-inside px-4">
+          <ul class="list-decimal list-inside px-4">
             <li>
               Analyzed >400,000 coronavirus research papers in the Open Research
               Dataset using Python and R.
@@ -428,7 +442,7 @@
         <section id="honors">
           <h2 class="text-xl font-medium -mb-1">Honors and Awards</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
-          <ul class="w-full grid grid-cols-2 list-inside list-disc px-4">
+          <ul class="w-full grid grid-cols-2 list-inside list-decimal px-4">
             <li>Hoo Hacks Patient Safety Challenge Award Winner</li>
             <li>Dean's List</li>
             <li>Eagle Scout Award</li>
